--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
                 </div>
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">Vinayak Nagar</h6>
-                    <p class="subtitle">Python Developer</p>
-                    <p>Currently i am working as a embbeded engineer intern in General Aeronautics Pvt. Ltd.
+                    <p class="subtitle">Embedded Software Engineer</p>
+                    <p>Currently i am working as a embbeded software engineer in General Aeronautics Pvt. Ltd.
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         &nbsp;&nbsp;&nbsp; Sept. 2022 - Present
                     </p>
-                    <p>As an embedded engineer intern, I develop new features for the agri drones and evaluate the efficacy of the drones.</p>
+                    <p>As an embedded software engineer, I develop new features for the agri drones and evaluate the efficacy of the drones.</p>
                     <a href="vinayak_nagar_resume.pdf">
                         <button class="btn btn-primary rounded mt-3">DOWNLOAD CV</button>
                     </a>           
