--- a/index.html
+++ b/index.html
@@ -80,11 +80,10 @@
         <h3>I'm vinayak nagar</h3>
         <span class="tag">Software Developer</span>
         
-        <p>I am a software developer from India. 
-          I am an MCA postgraduate from Vellore Institute of Technology.
-          I am very passionate about improving my coding skills & developing product.
-          I specialize in building embedded and automation software, leveraging my expertise in Python and foundational embedded systems principles.
-          I am also have a good command on DSA using python.
+        <p>Skilled Software Developer with over a year of professional experience. 
+            Proficient in Python, with a strong track record in designing and 
+            optimizing software solutions. Adept at collaborating with cross-functional 
+            teams to deliver high-quality, reliable, and efficient software products.
           Love to Learn new Things. </p>
         
         <div class="box-container">
