--- a/index.html
+++ b/index.html
@@ -342,6 +342,10 @@
       "icon": "https://img.icons8.com/color/48/000000/python--v1.png"
     },
     {
+      "name": "C++",
+      "icon": "https://img.icons8.com/external-others-iconmarket/64/external-cpp-file-types-others-iconmarket-2.png"
+    },
+    {
         "name": "GitHub",
         "icon": "https://img.icons8.com/glyph-neue/48/ffffff/github.png"
     },
