--- a/index.html
+++ b/index.html
@@ -343,6 +343,10 @@
     },
     {
       "name": "C++",
+      "icon": "https://img.icons8.com/color/48/java-coffee-cup-logo--v1.png"
+    },
+    {
+      "name": "Java",
       "icon": "https://img.icons8.com/external-others-iconmarket/64/external-cpp-file-types-others-iconmarket-2.png"
     },
     {
